--- a/manuscript/refs.bib
+++ b/manuscript/refs.bib
@@ -29,6 +29,26 @@
 	year={2018}
 }
 
+@inproceedings{szegedy2004quantum,
+	title={Quantum speed-up of Markov chain based algorithms},
+	author={Szegedy, Mario},
+	booktitle={45th Annual IEEE symposium on foundations of computer science},
+	pages={32--41},
+	year={2004},
+	organization={IEEE}
+}
+
+@article{wocjan2008speedup,
+	title={Speedup via quantum sampling},
+	author={Wocjan, Pawel and Abeyesinghe, Anura},
+	journal={Physical Review A},
+	volume={78},
+	number={4},
+	pages={042336},
+	year={2008},
+	publisher={APS}
+}
+
 @inproceedings{haener2018quantum,
 	title={Quantum circuits for floating-point arithmetic},
 	author={Haener, Thomas and Soeken, Mathias and Roetteler, Martin and Svore, Krysta M},
@@ -47,6 +67,16 @@
 	pages={195--202},
 	year={2017},
 	publisher={Nature Publishing Group}
+}
+
+@article{lemieux2020efficient,
+	title={Efficient quantum walk circuits for Metropolis-Hastings algorithm},
+	author={Lemieux, Jessica and Heim, Bettina and Poulin, David and Svore, Krysta and Troyer, Matthias},
+	journal={Quantum},
+	volume={4},
+	pages={287},
+	year={2020},
+	publisher={Verein zur F{\"o}rderung des Open Access Publizierens in den Quantenwissenschaften}
 }
 
 @Manual{wes,    title = {wesanderson: A Wes Anderson Palette Generator},    author = {Karthik Ram and Hadley Wickham},    year = {2018},    note = {R package version 0.3.6},    url = {https://CRAN.R-project.org/package=wesanderson},  }
